<resources>
    <string name="app_name">Light Map</string>
    <!--ads-->
    <string name="ads_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ads_full_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admod_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="google_maps_key2">AIzaSyDUsrtfc2n8mLqfYaEZrBS3DjsZlQAN4-Y</string>
    <string name="share_with">Share with</string>
    <string name="default_map">Default</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="routing">Routing</string>
    <string name="find_address">Find address</string>
    <string name="current_place">Current place</string>
    <string name="find_near_by">Find near by</string>
    <string name="map_type">Map type</string>
    <string name="food_and_drink"><![CDATA[Food & Drink]]></string>
    <string name="restaurant">Restaurants</string>
    <string name="bar">Bars</string>
    <string name="coffee">Coffee</string>
    <string name="delivery">Delivery</string>
    <string name="park">Parks</string>
    <string name="gym">Gyms</string>
    <string name="art">Art</string>
    <string name="thingsToDo">Things to do</string>
    <string name="atrraction">Attractions</string>
    <string name="nightLife">Nightlife</string>
    <string name="liveMusic">Live music</string>
    <string name="movies">Movies</string>
    <string name="museum">Museums</string>
    <string name="library">Libraries</string>
    <string name="shopping">Shopping</string>
    <string name="grocery">Groceries</string>
    <string name="beautySupplies">Beauty supplies</string>
    <string name="carDealers">Car dealers</string>
    <string name="homeGarden"><![CDATA[Home & garden]]></string>
    <string name="apparel">Clothes</string>
    <string name="shoppingCenter">Shopping centers</string>
    <string name="electronic">Electronics</string>
    <string name="sportingGoods">Sporting goods</string>
    <string name="convenieceStore">Convenience stores</string>
    <string name="services">Services</string>
    <string name="hotel">Hotels</string>
    <string name="atm">ATMs</string>
    <string name="beautySalons">Beauty salons</string>
    <string name="carRental">Car rental</string>
    <string name="carWash">Car wash</string>
    <string name="dryClean">Dry cleaning</string>
    <string name="gas">Gas</string>
    <string name="hospital">Hospitals</string>
    <string name="mailShip">Mail &amp; Shipping</string>
    <string name="parking">Parking</string>
    <string name="category">Categories</string>
    <string name="pharmacy">Pharmacies</string>
    <string name="bank">Bank</string>
    <string name="jewelry">Jewelry stores</string>
    <string name="stadium">Stadium</string>
    <string name="amusementPark">Amusement Park</string>
    <string name="book">Book stores</string>
</resources>
