<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/layout0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/banner" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout0"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutFindRouting"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_item_main"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_direction"
                android:tint="#424242" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/routing" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFindAddress"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_item_main"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_search_black_24dp"
                android:tint="#424242" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_address" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/layoutCurrentPlace"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_item_main"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_my_location"
                android:tint="#424242" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_place" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutNearBy"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="12dp"
            android:layout_weight="1"
            android:background="@drawable/bg_item_main"
            android:elevation="3dp"
            android:gravity="center"
            android:orientation="vertical"
            tools:targetApi="lollipop">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_near_me_black_24dp"
                android:tint="#424242" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/find_near_by" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads_banner_id"/>
</RelativeLayout>